--- a/.env.dev
+++ b/.env.dev
@@ -21,3 +21,10 @@ DEFAULT_PASS=guest
 
 #Production Config
 GUNICORN_WORKERS=5
+
+# Neo4j Config
+NEO4J_URI=neo4j+s://86b0a0ef.databases.neo4j.io
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=LkmGjjtN8o-X6gzZwXaJEiAnmZ_xrr6oPuT0YZFTmWk
+AURA_INSTANCEID=86b0a0ef
+AURA_INSTANCENAME=Instance01
