--- a/.env.dev
+++ b/.env.dev
@@ -23,8 +23,15 @@ DEFAULT_PASS=guest
 GUNICORN_WORKERS=5
 
 # Neo4j Config
-NEO4J_URI=neo4j+s://6969c19c.databases.neo4j.io
+# NEO4J_URI=neo4j+s://6969c19c.databases.neo4j.io
+# NEO4J_USERNAME=neo4j
+# NEO4J_PASSWORD=5sPXmEXjmok0nqx8S4phTdj-KOcYgXsOuH0AgpCEx5g
+
+NEO4J_URI=bolt://localhost:7687
 NEO4J_USERNAME=neo4j
-NEO4J_PASSWORD=5sPXmEXjmok0nqx8S4phTdj-KOcYgXsOuH0AgpCEx5g
+NEO4J_PASSWORD=testontology
 AURA_INSTANCEID=6969c19c
 AURA_INSTANCENAME=Instance01
+
+# GraphDB Config
+GRAPHDB_URI=http://localhost:7200
