--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^5.2.1",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
