--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.5",
@@ -26,6 +27,7 @@
     "@types/react": "17.0.39",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "prettier": "^3.3.2",
     "typescript": "4.5.5"
   }
 }
