feat: add test endpoint

--- a/.env.dev
+++ b/.env.dev
@@ -34,4 +34,4 @@ AURA_INSTANCEID=6969c19c
 AURA_INSTANCENAME=Instance01
 
 # GraphDB Config
-GRAPHDB_URI=http://localhost:7200
+GRAPHDB_URI=https://ontologyresearch.cs.ui.ac.id/db
